--- a/assets/css/buddypress.css
+++ b/assets/css/buddypress.css
@@ -353,12 +353,25 @@ body.buddypress #buddypress.buddypress-wrap .html-active button.switch-html {
     padding-left: 8px;
 }
 
-.buddypress .avatar {
+.buddypress .avatar,
+.grid > li .item-avatar .avatar {
     border-radius: 3px;
 }
 
-.buddypress.round-avatars .avatar {
+body.round-avatars .buddypress-wrap .avatar,
+.buddypress.round-avatars .avatar,
+body.round-avatars #buddypress #item-header-cover-image #item-header-avatar img.avatar {
     border-radius: 50%;
+}
+
+.round-avatars #buddypress #item-header-cover-image #item-header-avatar .member-status {
+    right: 15px;
+    top: 15px;
+}
+
+body:not(.round-avatars) .grid .member-status {
+    right: -2px;
+    top: -2px;
 }
 
 @media screen and (min-width: 46.8em) {
@@ -1708,6 +1721,19 @@ li.load-more a.loading::after {
     animation: spin 1s infinite linear;
 }
 
+.buddypress .buddypress-wrap .generic-button .loading::after {
+    content: "\f110";
+    font-family: "FontAwesome";
+    font-size: 18px;
+    font-weight: 900;
+    line-height: 1;
+    margin-left: 10px;
+    text-align: center;
+    display: inline-block;
+    -webkit-animation: spin 1s infinite linear;
+    animation: spin 1s infinite linear;
+}
+
 @-ms-keyframes spin {
     from {
         -ms-transform: rotate(0deg);
@@ -1767,7 +1793,7 @@ li.load-more a.loading::after {
     height: 80px;
     width: 80px;
     margin: 0 auto 10px;
-    border-radius: 50%;
+    /* border-radius: 50%; */
 }
 
 .bp-member-preview-cover,
@@ -3082,9 +3108,14 @@ button#bp-delete-avatar {
 /*--------------------------------------------------------------
 # BuddyPress Sidebar
 --------------------------------------------------------------*/
+.widget .activity-list {
+    padding: 0;
+}
 
 .buddypress-wrap .buddypress.widget .avatar-block,
 .buddypress.widget .avatar-block {
+    display: flex;
+    flex-flow: row wrap;
     margin: 0 -5px;
 }
 
@@ -3249,7 +3280,19 @@ button#bp-delete-avatar {
 
 .buddypress.widget div.activity-list blockquote .activity-item:not(.mini) {
     padding-top: 15px;
-    padding-bottom: 1px;
+    padding-bottom: 15px;
+    box-shadow: none;
+    border: 1px solid var(--global-border-color);
+    border-radius: var(--global-border-radius);
+}
+
+.buddypress.widget .bp-latest-activities-block .activity-list blockquote {
+    margin: 0 0 15px;
+    padding: 0 !important;
+}
+
+.buddypress.widget div.activity-list blockquote .activity-item:not(.mini) p {
+    margin: 0;
 }
 
 .wp-block-bp-login-form form#bp-login-widget-form {
@@ -3277,6 +3320,90 @@ button#bp-delete-avatar {
     outline: none;
 }
 
+.widget .bp-block-members .member-content .item-header-avatar img.avatar,
+.widget .bp-block-groups .group-content .item-header-avatar img.avatar {
+    width: 50px;
+    height: 50px;
+}
+
+.widget .bp-block-members.avatar-full .item-header-avatar,
+.widget .bp-block-groups.avatar-full .item-header-avatar {
+    width: 70px;
+}
+
+.widget .bp-dynamic-block-container .item-options {
+    font-size: 13px;
+}
+
+.widget .bp-block-member .member-content,
+.widget .bp-block-group .group-content {
+    display: flex;
+    flex-direction: column;
+}
+
+.widget .bp-block-group .group-description,
+.widget .bp-block-member .member-description {
+    padding: 15px 0 0;
+    text-align: center;
+}
+
+.widget .bp-block-member.avatar-full.has-cover .item-header-avatar,
+.widget .bp-block-group.avatar-full.has-cover .item-header-avatar {
+    width: 100%;
+    text-align: center;
+}
+
+.widget .bp-block-group.avatar-full.has-cover img.avatar,
+.widget .bp-block-member.avatar-full.has-cover img.avatar {
+    margin: auto;
+}
+
+.widget .bp-block-group.has-description .bp-profile-button a.button {
+    float: none;
+}
+
+.widget .bp-profile-button,
+.widget .bp-block-group .bp-profile-button a.button,
+.widget .bp-block-member .bp-profile-button a.button {
+    margin-top: 0;
+    position: static;
+}
+
+.widget .bp-block-member .member-description .bp-profile-button {
+    margin-top: 15px;
+}
+
+.widget .bp-block-member .bp-profile-button a.button,
+.widget .bp-block-group.has-description .bp-profile-button a.button {
+    font-family: inherit;
+    font-size: medium;
+    color: #fff;
+    background-color: var(--button_background_color);
+    border-radius: var(--button-border-radius)!important;
+    padding: 8px 20px;
+    font-weight: 700;
+    font-style: normal;
+    text-decoration: none;
+    text-align: center;
+    cursor: pointer;
+    display: inline-block;
+    line-height: 1.3;
+    border: 1px solid var(--button_border_color);
+    outline: 0;
+    vertical-align: middle;
+    -webkit-appearance: none;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-transition: all .2s linear;
+    transition: all .2s linear;
+}
+
+.widget .bp-block-member .bp-profile-button a.button:hover,
+.widget .bp-block-group.has-description .bp-profile-button a.button:hover {
+    background-color: var(--button_background_hover_color);
+    border: 1px solid var(--button_border_hover_color);
+    color: #fff;
+}
 
 /*--------------------------------------------------------------
 # Extra Plugins Support
